# zot-registry-quadlet-server

./: .gitignore  CMakeLists.txt  README.md
config/cert/: Makefile
config/quadlet/: zot.container
config/zot/: config.json
oci-images/: Makefile
pkg/: build.sh  buildsrc.sh  buildsrpm.sh  zot-registry-quadlet-server.spec
tests/: integration-test.sh
